Fix Navigation to wrap

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ hr{
 .container-head {
 border: 1px solid none;
 display: flex;
-flex-flow: row wrap;
+flex-wrap: wrap;
 justify-content: flex-start;
 align-items: center;
 gap: 50px;
